--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.itca.demomysql_volley" >
+    package="com.itca.demomysql_volley">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DemoMySQLVolley" >
+        android:theme="@style/Theme.DemoMySQLVolley">
+        <activity
+            android:name=".confirmcustom"
+            android:exported="true" />
+        <activity
+            android:name=".acercade"
+            android:exported="true" />
         <activity
             android:name=".pruebaVolly"
             android:exported="true" />
@@ -16,7 +22,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.DemoMySQLVolley.NoActionBar" >
+            android:theme="@style/Theme.DemoMySQLVolley.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
